Add Audio4 and Panel Result
เพิ่มเสียง 4 ทำงานเมื่อระยะใกล้หรือไกลจากกล้อง และ Panel Result ทำงานเมื่อ Scan ใบหน้าไม่ผ่าน

--- a/LoxleyOrbit.FaceScan/LoxleyOrbit.FaceScan.csproj
+++ b/LoxleyOrbit.FaceScan/LoxleyOrbit.FaceScan.csproj
@@ -223,6 +223,7 @@
     <None Include="bin\x86\Debug\Images\DashWhite.png" />
     <Content Include="Audio\Audio1.wav" />
     <Content Include="Audio\Audio2.wav" />
+    <Content Include="Audio\Audio4.wav" />
     <Content Include="haarcascade_frontalface_alt_tree.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
