แก้ไข การอ่านบัตรประจำตัวประชาชน เพราะว่าเอ็มทำพัง

--- a/LoxleyOrbit.FaceScan/App.config
+++ b/LoxleyOrbit.FaceScan/App.config
@@ -13,6 +13,9 @@
             <setting name="FullScreen" serializeAs="String">
                 <value>Y</value>
             </setting>
+            <setting name="StopKiosk" serializeAs="String">
+                <value>23:15</value>
+            </setting>
         </LoxleyOrbit.FaceScan.Properties.Settings>
     </applicationSettings>
 </configuration>
