--- a/LoxleyOrbit.FaceScan/Properties/Settings.settings
+++ b/LoxleyOrbit.FaceScan/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="FullScreen" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Y</Value>
     </Setting>
+    <Setting Name="StopKiosk" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">23:15</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
